These are my changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="wrapper">
     <header>
-      <div class="headimg"><img src="/images/image-omelette.jpeg" alt=""></div>
+      <div class="headimg"><img src="images/image-omelette.jpeg" alt=""></div>
     </header>
     <div class="hero paddinglr">
       <h1>Simple Omelette Recipe</h1>
